--- a/src/main/resources/.travis.yml
+++ b/src/main/resources/.travis.yml
@@ -9,6 +9,7 @@ branches:
 # Travis CI 서버의 home
 cache:
   directories:
+    - '$Home/.m2/repository'
     - '$Home/.gradle'
 
 script: "./gradlew clean build"
