--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,8 +10,8 @@ spring:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL5Dialect
   datasource:
-    username: jiwone
-    password: jiwone
+    username: jiwon
+    password: jiwon
     url: jdbc:mysql://localhost/my_daily_feed
   devtools:
     livereload:
