chore: [Travis CI] - Adds MySQL option to .travis.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ handlebars:
 spring:
     jpa:
       hibernate:
-        ddl-auto: create
+        ddl-auto: create-drop
       show-sql: true
       database-platform: org.hibernate.dialect.MySQL5Dialect
     datasource:
