--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ cache:
     - '$Home/.gradle'
 
 before_install:
-	- mysql -e 'CREATE DATABASE my_daily_feed'
+  - mysql -e 'CREATE DATABASE IF NOT EXISTS my_daily_feed;'
 
 script: "./gradlew clean build"
 
