chore: [Travis CI] - Fixes another typo(2nd)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
         username: jiwon
         password: jiwon
         url: jdbc:mysql://localhost/my_daily_feed
-        driverClassName: com
+        driverClassName: com.mysql.jdbc.Driver
     devtools:
       livereload:
         enabled: true
