chore: [Travis CI] - Fixes typo in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ cache:
 before_install:
   - mysql -e 'CREATE DATABASE IF NOT EXISTS my_daily_feed;'
   - mysql -u root -e "CREATE USER 'jiwon'@'localhost' IDENTIFIED BY 'jiwon';"
-  - mysql -u root -e 'GRANT ALL ON my_daily_feed.* TO 'jiwon'@'localhost';'
+  - mysql -u root -e "GRANT ALL ON my_daily_feed.* TO 'jiwon'@'localhost';"
 
 script: "./gradlew clean build"
 before deploy:
