--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ cache:
     - '$Home/.gradle'
 
 before install:
-  - mysql -e "CREATE DATABASE IF NOT EXISTS my_daily_feed;"
-  - mysql -u root -e "CREATE USER 'jiwon'@'localhost' IDENTIFIED BY 'jiwon';"
-  - mysql -u root -e "GRANT ALL ON my_daily_feed.* TO 'jiwon'@'localhost';"
+  - mysql -e 'CREATE DATABASE IF NOT EXISTS my_daily_feed;'
+  - mysql -u root -e 'CREATE USER 'jiwon'@'localhost' IDENTIFIED BY 'jiwon';'
+  - mysql -u root -e 'GRANT ALL ON my_daily_feed.* TO 'jiwon'@'localhost';'
 
 script: "./gradlew clean build"
 
