--- a/appspec.yml
+++ b/appspec.yml
@@ -1,7 +1,7 @@
 version: 0.0
 os: linux
 files:
-  - source: /
+  - source: /deploy/
     destination: /home/ubuntu/app/travis/build/ # EC2 서버 내에 zip 파일 받을 디렉토리
 
 
