chore: [Travis CI] - Sets cache option to false

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,11 @@ branches:
     - master
 
 # Travis CI 서버의 home
-cache:
-  directories:
-    - '$Home/.m2/repository'
-    - '$Home/.gradle'
+#cache:
+#  directories:
+#    - '$Home/.m2/repository'
+#    - '$Home/.gradle'
+cache: false
 
 before_install:
   - mysql -e 'CREATE DATABASE IF NOT EXISTS my_daily_feed;'
