chore: [Travis CI] - Fixes option that remove .gradle directory

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before cache:
 
 cache:
   directories:
-    - '$Home/.m2/repository'
+#    - '$Home/.m2/repository'
     - '$Home/.gradle'
 
 
@@ -25,7 +25,6 @@ before_install:
   - mysql -u root -e "CREATE USER 'jiwon'@'localhost' IDENTIFIED BY 'jiwon';"
   - mysql -u root -e "GRANT ALL ON my_daily_feed.* TO 'jiwon'@'localhost';"
 
-before script: "gradle --refresh-dependencies"
 script: "./gradlew clean build"
 
 before_deploy:
