--- a/build.gradle
+++ b/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     compile ('pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.0')
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     compile("org.springframework.boot:spring-boot-devtools")
+    compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.0.6.RELEASE'
+    compile group: 'com.auth0', name: 'java-jwt', version: '3.4.0'
 }
